// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render properly with "circle" edges 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1.6rem;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .sc-AxjAm * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .sc-AxjAm * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #126AFA;
}

.c0:not(:disabled):hover {
  background: #70ADE9;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Flat Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "flat" variant and "confirmation" color  1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  background: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0::after {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  bottom: 1.05rem;
  left: 50%;
  background: #269326;
  height: 0.15rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.15rem;
  -webkit-transform: translate(-50%);
  -ms-transform: translate(-50%);
  transform: translate(-50%);
}

.c0:disabled {
  color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  color: #008000;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #008000;
}

.c0:not(:disabled):hover {
  color: #269326;
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #269326;
}

.c0:not(:disabled):hover::after {
  width: calc(100% - 4.8rem);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="confirmation"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "flat" variant and "default" color  1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  background: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0::after {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  bottom: 1.05rem;
  left: 50%;
  background: #70ADE9;
  height: 0.15rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.15rem;
  -webkit-transform: translate(-50%);
  -ms-transform: translate(-50%);
  transform: translate(-50%);
}

.c0:disabled {
  color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  color: #126AFA;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #126AFA;
}

.c0:not(:disabled):hover {
  color: #70ADE9;
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #70ADE9;
}

.c0:not(:disabled):hover::after {
  width: calc(100% - 4.8rem);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "flat" variant and "error" color  1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  background: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0::after {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  bottom: 1.05rem;
  left: 50%;
  background: #D42626;
  height: 0.15rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.15rem;
  -webkit-transform: translate(-50%);
  -ms-transform: translate(-50%);
  transform: translate(-50%);
}

.c0:disabled {
  color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  color: #cc0000;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #cc0000;
}

.c0:not(:disabled):hover {
  color: #D42626;
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #D42626;
}

.c0:not(:disabled):hover::after {
  width: calc(100% - 4.8rem);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="error"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "flat" variant should render properly when it is disabled 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  background: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0::after {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  bottom: 1.05rem;
  left: 50%;
  background: #70ADE9;
  height: 0.15rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.15rem;
  -webkit-transform: translate(-50%);
  -ms-transform: translate(-50%);
  transform: translate(-50%);
}

.c0:disabled {
  color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  color: #126AFA;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #126AFA;
}

.c0:not(:disabled):hover {
  color: #70ADE9;
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #70ADE9;
}

.c0:not(:disabled):hover::after {
  width: calc(100% - 4.8rem);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    disabled=""
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "flat" variant should render properly with "M" size 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  background: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0::after {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  bottom: 1.05rem;
  left: 50%;
  background: #70ADE9;
  height: 0.15rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.15rem;
  -webkit-transform: translate(-50%);
  -ms-transform: translate(-50%);
  transform: translate(-50%);
}

.c0:disabled {
  color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  color: #126AFA;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #126AFA;
}

.c0:not(:disabled):hover {
  color: #70ADE9;
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #70ADE9;
}

.c0:not(:disabled):hover::after {
  width: calc(100% - 4.8rem);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "flat" variant should render properly with "S" size 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem 2.4rem;
  border-radius: 0.8rem;
  background: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0::after {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  bottom: 0.85rem;
  left: 50%;
  background: #70ADE9;
  height: 0.15rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.15rem;
  -webkit-transform: translate(-50%);
  -ms-transform: translate(-50%);
  transform: translate(-50%);
}

.c0:disabled {
  color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  color: #126AFA;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #126AFA;
}

.c0:not(:disabled):hover {
  color: #70ADE9;
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #70ADE9;
}

.c0:not(:disabled):hover::after {
  width: calc(100% - 4.8rem);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "outlined" variant and "confirmation" color  1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: calc(1rem - 0.1rem) calc(2.4rem - 0.1rem) calc(1.2rem - 0.1rem) calc(2.4rem - 0.1rem);
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  border: 0.1rem solid;
  color: #b0bcc8;
  border-color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  border: 0.1rem solid;
  color: #008000;
  border-color: #008000;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #008000;
}

.c0:not(:disabled):hover {
  border: 0.2rem solid;
  color: #269326;
  border-color: #269326;
  padding: calc(1rem - 0.2rem) calc(2.4rem - 0.2rem) calc(1.2rem - 0.2rem) calc(2.4rem - 0.2rem);
  box-shadow: 0 0.4rem 0.8rem rgba(0,128,0,0.2);
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #269326;
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="confirmation"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "outlined" variant and "default" color  1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: calc(1rem - 0.1rem) calc(2.4rem - 0.1rem) calc(1.2rem - 0.1rem) calc(2.4rem - 0.1rem);
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  border: 0.1rem solid;
  color: #b0bcc8;
  border-color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  border: 0.1rem solid;
  color: #126AFA;
  border-color: #126AFA;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #126AFA;
}

.c0:not(:disabled):hover {
  border: 0.2rem solid;
  color: #70ADE9;
  border-color: #70ADE9;
  padding: calc(1rem - 0.2rem) calc(2.4rem - 0.2rem) calc(1.2rem - 0.2rem) calc(2.4rem - 0.2rem);
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #70ADE9;
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "outlined" variant and "error" color  1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: calc(1rem - 0.1rem) calc(2.4rem - 0.1rem) calc(1.2rem - 0.1rem) calc(2.4rem - 0.1rem);
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  border: 0.1rem solid;
  color: #b0bcc8;
  border-color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  border: 0.1rem solid;
  color: #cc0000;
  border-color: #cc0000;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #cc0000;
}

.c0:not(:disabled):hover {
  border: 0.2rem solid;
  color: #D42626;
  border-color: #D42626;
  padding: calc(1rem - 0.2rem) calc(2.4rem - 0.2rem) calc(1.2rem - 0.2rem) calc(2.4rem - 0.2rem);
  box-shadow: 0 0.4rem 0.8rem rgba(204,0,0,0.2);
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #D42626;
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="error"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "outlined" variant should render properly when it is disabled 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: calc(1rem - 0.1rem) calc(2.4rem - 0.1rem) calc(1.2rem - 0.1rem) calc(2.4rem - 0.1rem);
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  border: 0.1rem solid;
  color: #b0bcc8;
  border-color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  border: 0.1rem solid;
  color: #126AFA;
  border-color: #126AFA;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #126AFA;
}

.c0:not(:disabled):hover {
  border: 0.2rem solid;
  color: #70ADE9;
  border-color: #70ADE9;
  padding: calc(1rem - 0.2rem) calc(2.4rem - 0.2rem) calc(1.2rem - 0.2rem) calc(2.4rem - 0.2rem);
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #70ADE9;
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    disabled=""
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "outlined" variant should render properly with "M" size 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: calc(1rem - 0.1rem) calc(2.4rem - 0.1rem) calc(1.2rem - 0.1rem) calc(2.4rem - 0.1rem);
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  border: 0.1rem solid;
  color: #b0bcc8;
  border-color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  border: 0.1rem solid;
  color: #126AFA;
  border-color: #126AFA;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #126AFA;
}

.c0:not(:disabled):hover {
  border: 0.2rem solid;
  color: #70ADE9;
  border-color: #70ADE9;
  padding: calc(1rem - 0.2rem) calc(2.4rem - 0.2rem) calc(1.2rem - 0.2rem) calc(2.4rem - 0.2rem);
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #70ADE9;
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "outlined" variant should render properly with "S" size 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: calc(0.8rem - 0.1rem) calc(2.4rem - 0.1rem) calc(1rem - 0.1rem) calc(2.4rem - 0.1rem);
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  border: 0.1rem solid;
  color: #b0bcc8;
  border-color: #b0bcc8;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):not(:hover) {
  border: 0.1rem solid;
  color: #126AFA;
  border-color: #126AFA;
}

.c0:not(:disabled):not(:hover) .sc-AxjAm * {
  fill: #126AFA;
}

.c0:not(:disabled):hover {
  border: 0.2rem solid;
  color: #70ADE9;
  border-color: #70ADE9;
  padding: calc(0.8rem - 0.2rem) calc(2.4rem - 0.2rem) calc(1rem - 0.2rem) calc(2.4rem - 0.2rem);
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #70ADE9;
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "rounded" edges 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .sc-AxjAm * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .sc-AxjAm * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #126AFA;
}

.c0:not(:disabled):hover {
  background: #70ADE9;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Flat Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "solid" variant and "confirmation" color  1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .sc-AxjAm * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .sc-AxjAm * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #008000;
}

.c0:not(:disabled):hover {
  background: #269326;
  box-shadow: 0 0.4rem 0.8rem rgba(0,128,0,0.2);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="confirmation"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "solid" variant and "default" color  1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .sc-AxjAm * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .sc-AxjAm * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #126AFA;
}

.c0:not(:disabled):hover {
  background: #70ADE9;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "solid" variant and "error" color  1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .sc-AxjAm * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .sc-AxjAm * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #cc0000;
}

.c0:not(:disabled):hover {
  background: #D42626;
  box-shadow: 0 0.4rem 0.8rem rgba(204,0,0,0.2);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="error"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "solid" variant should render properly when it is disabled 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .sc-AxjAm * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .sc-AxjAm * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #126AFA;
}

.c0:not(:disabled):hover {
  background: #70ADE9;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    disabled=""
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "solid" variant should render properly with "M" size 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .sc-AxjAm * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .sc-AxjAm * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #126AFA;
}

.c0:not(:disabled):hover {
  background: #70ADE9;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "solid" variant should render properly with "S" size 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .sc-AxjAm * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .sc-AxjAm * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #126AFA;
}

.c0:not(:disabled):hover {
  background: #70ADE9;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with "square" edges 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .sc-AxjAm * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .sc-AxjAm * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #126AFA;
}

.c0:not(:disabled):hover {
  background: #70ADE9;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Flat Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with any icon at the beginning of the text 1`] = `
.c2 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c2 * {
  fill-opacity: 1;
  fill: #607890;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .c1 * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .c1 * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #126AFA;
}

.c0:not(:disabled):hover {
  background: #70ADE9;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0 .c1 + .c3 {
  margin-left: 0.8rem;
}

.c0 .c3 + .c1 {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <svg
      class="c1 c2"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
    <span
      class="c3 c4"
    >
      Solid Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with any icon at the end of the text 1`] = `
.c2 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c2 * {
  fill-opacity: 1;
  fill: #607890;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .c1 * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .c1 * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #126AFA;
}

.c0:not(:disabled):hover {
  background: #70ADE9;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0 .c1 + .c3 {
  margin-left: 0.8rem;
}

.c0 .c3 + .c1 {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <svg
      class="c1 c2"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
    <span
      class="c3 c4"
    >
      Solid Button
    </span>
  </button>
</div>
`;

exports[`Button component should render properly with gradient 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .sc-AxjAm * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .sc-AxjAm * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: linear-gradient(to right,#126AFA,#1E9BD7);
}

.c0:not(:disabled):hover {
  background: linear-gradient(to right,#70ADE9,#35A5DB);
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Gradient Button
    </span>
  </button>
</div>
`;

exports[`Button component should wrap children into Text component when rendering string or number 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 0.8rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c0:disabled .sc-AxjAm * {
  fill: #dfe4e9;
}

.c0:not(:disabled) {
  color: #ffffff;
}

.c0:not(:disabled) .sc-AxjAm * {
  fill: #ffffff;
}

.c0:not(:disabled):not(:hover) {
  background: #126AFA;
}

.c0:not(:disabled):hover {
  background: #70ADE9;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c0 .sc-AxjAm + .c1 {
  margin-left: 0.8rem;
}

.c0 .c1 + .sc-AxjAm {
  margin-left: 0.8rem;
}

<div>
  <button
    class="c0"
    color="default"
    type="button"
  >
    <span
      class="c1 c2"
    >
      Some text
    </span>
    <i>
      some icon
    </i>
    <div>
      element2
    </div>
  </button>
</div>
`;
